--- a/index.html
+++ b/index.html
@@ -8,30 +8,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="box">
-        <div class="moon"></div>
-    </div>
-    <div class="box-1"></div>
-    <div class="box-2"></div>
-    <div class="road">
-        <div class="container">
-            <div class="ballon-1">
-                <div class="belgi"></div>
-            </div>
-            <div class="ballon-2">
-                <div class="belgi"></div>
-            </div>
-            <div class="far"></div>
-            <div class="stop-far"></div>
-            <div class="window-1"></div>
-            <div class="window-2"></div>
-            <div class="window-3"></div>
-            <div class="black-line"></div>
-            <div class="taxi">
-                <h3>TAXI</h3>
-            </div>
+    <div class="container-1">
+        <div class="box">
+            <div class="moon"></div>
         </div>
-        <div class="line"></div>
+        <div class="box-1"></div>
+        <div class="box-2"></div>
+        <div class="road">
+            <div class="container">
+                <div class="ballon-1">
+                    <div class="belgi"></div>
+                </div>
+                <div class="ballon-2">
+                    <div class="belgi"></div>
+                </div>
+                <div class="far"></div>
+                <div class="stop-far"></div>
+                <div class="window-1"></div>
+                <div class="window-2"></div>
+                <div class="window-3"></div>
+                <div class="black-line"></div>
+                <div class="taxi">
+                    <h3>TAXI</h3>
+                </div>
+            </div>
+            <div class="line"></div>
+        </div>
+
     </div>
+    
 </body>
 </html>
